2016/11/26 v144
	1. Fix swap action for flyout spells.

2016/11/26 v143
	1. Reduce memory increasment.

2016/11/26 v142
	1. The auto-hide system can works with the auto fade, it the bar use them both, then the macro condition will be used to check if the bar need to be auto fade, it'll not be auto-hide.
	2. Add several macro unit id to the macro condition maker.

2016/11/26 v141
	1. Fix the fade out effect.
	2. The action bar's bag bar can be auto fade out.

2016/11/26 v140
	1. Fix several bugs.
	2. Auto fade out is added to the action bars.

2016/11/20 v138
	1. The Order Hall's CommandBar will be auto hide after several times, move the mouse over it would show.

2016/11/18 v136
	1. The container can be renamed and it's name would be shown.

2016/11/08 v135
	1. Fix the token panel's width to show value more than 10000.

2016/11/04 v134
	1. In raid panel, sending buff/debuff to black list is using alt+right-click, not right-click only.
	2. The auto-gen toy bar will remove used in-cooldown toys, so you can always get usable toy in the auto-gen list.

2016/10/31 v133
	1. The bank container's deposit button has changed the position to be used more easily.
	2. The token list would be shown, and the watch list can be modified through the menu.

2016/10/30 v132
	1. Show the upgrade icon on container buttons, (won't work until blz fix the api).

2016/10/30 v131
	1. Only usable toy would be generated for auto-gen bars.

2016/10/27 v130
	1. Update for WOW 7.1

2016/10/15 v129
	1. Update for the IGAS v121

2016/10/08 v128
	1. Remove the filter code and order settings from the auto-gen popup system, add gametooltip filter for it.
	2. All auto-gen popup bar of items will used one thread to refresh, so the cost is reduced and no item would be displayed twice.

2016/10/01 v127
	1. Fix display error for raidpanel's menu.

2016/10/01 v126
	1. A new class buff panel is added to raidpanel, used to show the class's ability like Shield Block, also you can modify the list by yourself.