@@ -1,3 +1,7 @@
+2016/11/26 v145
+	1. The micro menu buttons can be moved to anywhere, and auto hide, auto fade can be used on it.
+	2. The extra bar can be moved, unlock it in the manager frame.
+
 2016/11/26 v144
 	1. Fix swap action for flyout spells.
 
